kustomize/podpri/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podpri-deployment
  labels:
    app: podpri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podpri
  template:
    metadata:
      labels:
        app: podpri
    spec:
      volumes:
        - name: podpri-storage
          emptyDir: {}
      containers:
        - name: podpri
          image: podpri
          volumeMounts:
            - name: podpri-storage
              mountPath: /storage
          command:
            - gunicorn
            - djndonacije.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 200m
        - name: podpri-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: podpri-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
