kustomize/podpri/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podpri
spec:
  selector:
    app: podpri
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: podpri-nginx
spec:
  selector:
    app: podpri
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
