kustomize/podpri/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://podpri.djnd.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podpri
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - podpri.djnd.si
      secretName: podpri-tls
  rules:
    - host: podpri.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podpri
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podpri-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: shared-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.podpri.djnd.si
      secretName: podpri-nginx-tls
  rules:
    - host: files.podpri.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podpri-nginx
                port:
                  number: 80
